fixed all tests to run JUnit5. Also fixed some dependencies